tests/syntax_error/double_plus.jou
def foo() -> None:
    # The + character is not allowed because it doesn't do anything useful.
    # As error message shows, the compiler doesn't see it as belonging to the double.
    x = 1.2e3
    y = 1.2e+3   # Error: invalid number or variable name "1.2e"
